# aula09_bootcamp

./: decorator_lixo.py  exemplo_00.py  loggin_exemplo_erros.py  meu_arquivo_de_logs_log  pyproject.toml  timer_decorator.py  utils_log.py
