[tool.poetry]
name = "aula09-bootcamp"
version = "0.1.0"
description = ""
authors = ["Jean Lucca <jlfreitas25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
pandas = "^2.3.3"
tenacity = "^9.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
